# accounts

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.bruno/: bruno.json  login.bru  read_user_by_id.bru  read_users_me.bru  refresh_token.bru  update_users_me.bru
.bruno/auth/: login.bru  refresh_token.bru
.github/workflows/: deploy.yml  pages.yml
app/: auth.py  crud.py  initial_data.py  main.py  models.py  schemas.py  utils.py
app/admin/: __init__.py  auth.py  views.py
app/api/: deps.py  main.py
app/api/routes/: auth.py  login.py  users.py  utils.py
app/core/: config.py  db.py  oauth.py  security.py  sqlalchemy_types.py  storages.py
app/internal/: admin.py
app/middleware/: client_cache_middleware.py
app/routers/: login.py
app/templates/: login.html
client/: .env.example  .gitignore  biome.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/components/: button.tsx  footer.tsx  grid-item.tsx  header.tsx  icons.tsx  input.tsx  interactive-avatar.tsx  logout-btn.tsx  oauth-btns.tsx  pos-and-tos.tsx  sidebar.tsx  user-avatar.tsx
client/src/components/dialogs/: logout-confirm.tsx  profile-picture.tsx
client/src/components/header/: apps-btn.tsx  avatar-btn.tsx  index.tsx
client/src/components/icons/: discord.tsx  google.tsx  info.tsx
client/src/components/ui/: alert.tsx  avatar.tsx  button.tsx  dialog.tsx  input.tsx  popover.tsx  seperator.tsx
client/src/constants/: api-endpoints.ts
client/src/contexts/: auth.tsx  dialog.tsx  theme.tsx
client/src/hooks/: use-token.ts
client/src/layouts/: auth.tsx  base.tsx
client/src/lib/: api.ts  auth.ts  token-store.ts  user.ts  utils.ts
client/src/pages/: create-account.tsx  google-auth.tsx  home.tsx  login-password.tsx  login.tsx  not-found.tsx  personal-info.tsx
client/src/pages/login/: index.tsx  password.tsx
client/src/pages/personal-info/: index.tsx  name.tsx  password.tsx  username.tsx
client/src/providers/: index.tsx
client/src/types/: user.ts
migrations/: env.py  script.py.mako
migrations/versions/: 79fbedb83689_add_password_last_changed_to_user.py  8f885238b54d_add_is_deletion_requested_to_user.py  96729827cf3b_create_users_table.py  cd3555407eb9_create_users_table.py  f032d3b911b4_create_users_table.py  f44e62bc24ee_create_users_table.py
scripts/: init-db.sh  init-minio.sh  package.py  prestart.sh
