[project]
name = "accounts"
version = "0.1.0"
description = "FastAPI microservice for authentication and account management."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "fastapi[standard]>=0.119.1",
    "psycopg[binary]>=3.2.11",
    "pwdlib[argon2]>=0.2.1",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.27",
]

[tool.poe.tasks]
dev = "uvicorn app.main:app --reload"

[tool.pyright]
reportExplicitAny = "none"
reportAny = "none"
reportUnknownVariableType = "none"
