[project]
name = "accounts"
version = "0.1.0"
description = "FastAPI microservice for authentication and account management."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.17.0",
  "authlib>=1.6.6",
  "email-validator>=2.2.0",
  "fastapi>=0.135.1",
  "fastapi-async-storages>=0.1.4",
  "httpx>=0.28.1",
  "itsdangerous>=2.2.0",
  "mangum>=0.21.0",
  "pillow>=12.0.0",
  "psycopg[binary]>=3.2.11",
  "pwdlib[argon2]>=0.2.1",
  "pydantic-settings>=2.11.0",
  "pyjwt>=2.10.1",
  "python-dotenv>=1.1.1",
  "python-multipart>=0.0.20",
  "sqladmin>=0.22.0",
  "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = ["uvicorn[standard]>=0.41.0"]

[tool.poe.tasks]
server = "uvicorn app.main:app --reload"
alembic-upgrade = "alembic upgrade head"
alembic-revision = "alembic revision --autogenerate"

[tool.pyright]
reportExplicitAny = "none"
reportAny = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportMissingTypeStubs = "none"
reportUnusedCallResult = "none"
reportUnknownArgumentType = "none"
